tests/ui/attr-invariant/invalid-pred-error/expected
error[E0308]: mismatched types
   |
13 | #[kani::invariant(x >= 0 && y >= 0)]
   |                        ^ expected `&i32`, found integer
   |
help: consider dereferencing the borrow
   |
13 | #[kani::invariant(*x >= 0 && y >= 0)]
   |                   +

error[E0308]: mismatched types
   |
13 | #[kani::invariant(x >= 0 && y >= 0)]
   |                                  ^ expected `&i32`, found integer
   |
help: consider dereferencing the borrow
   |
13 | #[kani::invariant(x >= 0 && *y >= 0)]
   |
